<?xml version="1.0"?>
<package>
  <name>dyros_controller</name>
  <version>0.0.0</version>
  <description>The dyros_controller package</description>
  <maintainer email="dyros@snu.ac.kr">dyros_controller Maintainer</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros_py</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
  </export>
</package>
